carga info basica de los usuarios